# rag_scientist

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ds_rag_framework/: timer.py  utils.py
src/ds_rag_framework/agents/: chat.py  vectorize.py
src/ds_rag_framework/autorag/: eval_utils.py  readme.md  test_data_payor_24_1.csv
src/ds_rag_framework/autorag/evaluators/: chunk_splitting.py  retrieval.py
src/ds_rag_framework/configs/: config.json  prompts.json
src/ds_rag_framework/data_loader/: load.py
src/ds_rag_framework/llms/: llm_picker.py  models.py  prompt_engineering.py  prompts.py
src/ds_rag_framework/local_vector_indexes/test_data_index/: default__vector_store.json  docstore.json  index_store.json
src/ds_rag_framework/user_interface/: chat_client.py
src/ds_rag_framework/user_interface/pages/: 02_vectorize_client.py
src/ds_rag_framework/vector_stores/: cogsearch.py  vertexai.py
src/ds_rag_framework/vectorizer/: vectorizer.py
